# pep440

./: .gitignore  .travis.yml  flit.ini  pyproject.toml  readme.md
.github/workflows/: ci.yml
pep440/: __init__.py  __main__.py  core.py
tests/: test_cli.py  test_pep.py
