[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pep440"
authors = [
    {name = "Matthias Bussonnier", email = "bussonniermatthias@gmail.com"},
]
readme = "readme.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dynamic = ["version", "description"]

[project.scripts]
pep440 = "pep440.__main__:main"

[project.urls]
Homepage =  "https://github.com/Carreau/pep440"

[project.optional-dependencies]
test = [
    "pytest-console-scripts",
    "pytest-cov",
    "pytest",
]
lint = [
    "check-manifest",
    "mypy",
]

[tool.flit.sdist]
include = [
    "tests/",
    "LICENSE"
]

[tool.check-manifest]
ignore = [
    "tests/__pycache__/*.pyc",
]

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]
script_launch_mode = "subprocess"
